using all config properties, favicon doesnt work.

--- a/bin/config.ini
+++ b/bin/config.ini
@@ -4,7 +4,8 @@
 port=8080
 
 # Root directory of the files
-root=~/www/lab/html/
+# root=~/www/lab/html/
+root=C:/Users/shirb/www/lab/html/
 
 # Default page to surf to, in case no page found in the HTTP request
 defaultPage=index.html
